# latency_checker

./: .gitignore  CLAUDE.md  README.md  __init__.py  api.py  cli.py  conversation_8680645b-2b09-4a46-b491-e8ff73f68bd1.json  conversation_94b3a943-bef1-40cd-8b6f-4ec050e25ab6.json  example_usage.py  latency-ui.sh  pyproject.toml  requirements.txt  setup.py
audio_statistics/: generator.py
core/: loader.py  processors.py
detection/: final_detector.py  silence.py
src/latency_checker/: __init__.py  analyzer.py  cli.py  detector.py  loader.py  splitter.py
src/latency_checker/web/: server.py
src/latency_checker/web/static/: index.html
tests/: conftest.py  test_api.py  test_final_detector.py  test_splitter.py  test_web.py
